--- a/Site Code/styles.css
+++ b/Site Code/styles.css
@@ -6,7 +6,7 @@ body, h1, h2, p, ul {
 body {
   font-family: "Arial", sans-serif;
   line-height: 1.6;
-  background-color: #f4f4f4;
+  background-color: rgb(211, 211, 211);
 }
 body .header {
   background-color: rgb(51, 211, 106);
@@ -33,46 +33,70 @@ body .header nav ul li a {
 }
 
 .wrapper {
-  max-width: 95%;
+  max-width: 97%;
   margin: 0 auto;
   padding: 2em 0;
   display: block;
 }
 .wrapper #hero {
-  background-color: #007BFF;
+  background-color: #40b4de;
+  max-height: 65vh;
   color: #fff;
-  text-align: center;
   padding: 60px 20px;
+  display: flex;
 }
-.wrapper #hero svg {
-  left: 0;
+.wrapper #hero img {
+  max-width: 40%;
+  max-height: auto;
+  border-radius: 0.6em;
 }
-.wrapper #hero h2 {
-  font-size: 36px;
+.wrapper #hero .content {
+  max-width: 60%;
+  margin-left: 20px; /* Adjust the margin as needed */
+  display: flex;
+  flex-direction: column;
+}
+.wrapper #hero .content h1 {
+  font-size: 55px; /* Adjust the font size as needed */
+  margin-bottom: 2em;
+}
+.wrapper #hero .content p {
+  font-size: 30px; /* Adjust the font size as needed */
+  line-height: 1.5;
   margin-bottom: 20px;
 }
-.wrapper #hero p {
-  font-size: 18px;
-  margin-bottom: 30px;
+.wrapper .module-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5em;
 }
-.wrapper #hero .cta-button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #fff;
-  color: #007BFF;
+.wrapper .module-wrapper a {
   text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
+  margin: 1em 1em;
+  width: 40%;
+  height: 40vh;
+  background-color: rgb(154, 128, 229);
+  border-radius: 3em;
 }
-.wrapper #hero .cta-button:hover {
-  background-color: #007BFF;
-  color: #fff;
+.wrapper .module-wrapper a div h2 {
+  color: white;
+  font-size: 2.5rem;
+  margin-top: 2.7em;
+  text-align: center;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+.wrapper .module-wrapper a div:hover {
+  cursor: pointer;
 }
 .wrapper section {
   background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   margin-bottom: 1.5em;
   text-align: center;
+  padding: 40px 20px;
+  border-radius: 2em;
 }
 .wrapper section h2 {
   font-size: 28px;
@@ -89,18 +113,6 @@ body .header nav ul li a {
 .wrapper section ul li {
   font-size: 16px;
   margin-bottom: 10px;
-}
-.wrapper section .cta-button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007BFF;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
-}
-.wrapper section .cta-button:hover {
-  background-color: #0056b3;
 }
 
 footer {
