--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body .header nav ul li a {
 }
 .wrapper #hero .content {
   max-width: 60%;
-  margin-left: 20px; /* Adjust the margin as needed */
+  margin-left: 5em; /* Adjust the margin as needed */
   display: flex;
   flex-direction: column;
 }
@@ -83,9 +83,6 @@ body .header nav ul li a {
   font-size: 2.5rem;
   margin-top: 2.7em;
   text-align: center;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-all;
 }
 .wrapper .module-wrapper a div:hover {
   cursor: pointer;
