--- a/indexstyle/styles.scss
+++ b/indexstyle/styles.scss
@@ -61,12 +61,13 @@ body {
             margin-left: 5em; /* Adjust the margin as needed */
             display: flex;
             flex-direction: column;
-            // align-items: center; /* Add this line */
+            align-items: center; /* Add this line */
     
             h1 {
                 font-size: 55px; /* Adjust the font size as needed */
                 margin-bottom: 2em;
             }
+
     
             p {
                 font-size: 30px; /* Adjust the font size as needed */
@@ -84,19 +85,20 @@ body {
         a {
             text-decoration: none;
             margin: 1em 1em;
-            width:40%;
-            height: 40vh;
+            width: 30%;
+            aspect-ratio: 1/1;
             background-color: 	rgb(154, 128, 229);
             border-radius: 3em;
             div {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
                 h2 {
                     color: white;
                     font-size: 2.5rem;
-                    margin-top: 2.7em;
                     text-align: center;
-                    // overflow-wrap: break-word;
-                    // word-wrap: break-word;
-                    // word-break: break-all;
                 }
                 &:hover {
                     cursor:pointer;
