--- a/PhysicalFitness/SleepForm/styles.css
+++ b/PhysicalFitness/SleepForm/styles.css
@@ -2,7 +2,9 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: #e6c1c1;
 }
+
 nav {
   background-color: #33d36a;
   color: #fff;
@@ -11,65 +13,120 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
+
 nav h1 {
   margin: 0;
   display: inline-block;
   vertical-align: middle;
-  font-size: 30px;
+  font-size: 38px;
 }
+
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   display: flex;
 }
+
 nav li {
   margin-left: 30px;
 }
+
 nav a {
   text-decoration: none;
   color: #fff;
   font-size: 20px;
 }
+
 .container {
-  max-width: 800px;
+  max-width: 900px;
   margin: 20px auto;
-  padding: 20px;
+  padding: 50px;
   background-color: #551a8b;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-form h1 {
+
+form h2 {
   text-align: center;
-  font-size: 36px;
-  margin-bottom: 20px;
+  font-size: 55px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
+
 .question {
-  margin-bottom: 15px;
-  font-size: 20px;
+  font-size: 23px;
+  margin-bottom: 12px;
+  transition: transform 0.3s;
 }
+
+.question:hover {
+  transform: scale(1);
+  outline: 2px solid rgb(121, 13, 157);
+  border-radius: 10px;
+  padding: 5px;
+}
+
 label {
   color: #fff;
 }
+
 input[type="radio"] {
   margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  transition: 0.2s;
 }
+
+.radio-button:hover {
+  cursor: pointer;
+}
+
 button[type="submit"],
 button[type="reset"] {
-  background-color: #4caf50;
+  background-color: #d52f2f;
   color: white;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 22px;
   transition: background-color 0.3s;
   margin-right: 10px;
 }
+
 button[type="submit"]:hover,
 button[type="reset"]:hover {
-  background-color: #45a049;
+  background-color: #b61919f7;
 }
+
 .button-group {
   text-align: center;
+}
+
+#suggestions-container {
+  text-align: center;
+  font-size: 50px;
+}
+
+#suggestions-list {
+  list-style-type: none;
+  padding: 0;
+  font-size: 30px;
+}
+
+#suggestions-list li {
+  border-radius: 5px;
+  background-color: rgb(255, 92, 92);
+  padding: 10px;
+  margin-bottom: 10px;
+  transition: transform 0.2s;
+}
+
+#suggestions-list li:hover {
+  transform: scale(1.1);
+}
+
+#suggestions-list li:last-child {
+  margin-bottom: 10px;
 }
